[tool.poetry]
name = "gym-sts"
version = "0.1.0"
description = "Gym environment for Slay the Spire"
authors = ["Zeus Kronion <kronion@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
docker = "^5.0.3"
gym = "^0.23.1"
pydantic = "^1.9.2"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
black = "^22.6.0"
mypy = "^0.971"
isort = "^5.10.1"
flake8-isort = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
include_trailing_comma = true
