[tool.poetry]
name = "gym-sts"
version = "0.1.0"
description = "Gym environment for Slay the Spire"
authors = ["Zeus Kronion <kronion@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9, <3.11"  # Tensorflow requires <3.11
docker = "^6"
pydantic = "^1.9.2"
ray = {extras = ["rllib"], version = "^2.4.0"}
fancyflags = "^1.1"
absl-py = "^1.3.0"
wandb = "^0.13.11"
dm-tree = "^0.1.7"
scikit-image = "^0.20.0"
tensorflow = "^2.12.0"
gymnasium = "^0.26.0"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
black = "^22.6.0"
mypy = "^0.991"
isort = "^5.10.1"
flake8-isort = "^4.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
hypothesis = "^6.58.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
include_trailing_comma = true
lines_after_imports = 2
